--- a/WhixxEngine/WhixxEngine.vcxproj
+++ b/WhixxEngine/WhixxEngine.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="d3dx12.h" />
+    <ClInclude Include="GPUstructs.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Window.h" />
